--- a/src/GR.Domain/GR.Domain.csproj
+++ b/src/GR.Domain/GR.Domain.csproj
@@ -5,4 +5,9 @@
     <RootNamespace>GR</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Domain\" />
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
 </Project>
